--- a/assets/html/store-game.html
+++ b/assets/html/store-game.html
@@ -34,7 +34,7 @@
         
             </div>
 
-            <div class="game-screenshot-menu">
+            <div class="game-screenshot-menu" id="game-screenshot-menu">
                 <button class="scroll-button" onclick="screenshotsScroll('left')"><</button>
                 <div class="game-screenshots" id="game-screenshots">    </div>
                 <button class="scroll-button" onclick="screenshotsScroll('right')">></button>
