--- a/assets/html/store.html
+++ b/assets/html/store.html
@@ -10,9 +10,15 @@
 
   <div class="list-container">
 
+    <div class="game-store-sort" id=game-store-sort">
+      <p id="game-count">Games: 0</p>
+
+      <input id="game-search" class="game-search" placeholder="Search"></input>
+    </div>
+
     <div class="game-store-list" id="game-store-list">
     </div>
-    
+
   </div>
-  
+
 </body>
