--- a/assets/html/library-game.html
+++ b/assets/html/library-game.html
@@ -36,7 +36,7 @@
         
             </div>
 
-            <div class="game-screenshot-menu">
+            <div class="game-screenshot-menu" id="game-screenshot-menu">
                 <button class="scroll-button" onclick="screenshotsScroll('left')"><</button>
                 <div class="game-screenshots" id="game-screenshots">    </div>
                 <button class="scroll-button" onclick="screenshotsScroll('right')">></button>
