--- a/assets/html/main.html
+++ b/assets/html/main.html
@@ -38,6 +38,7 @@
       const octokit = new Octokit();
       const opn = require('opn');
       const openExplorer = require('open-file-explorer');
+      const extract = require('extract-zip')
 
       function getChromiumExecPath() {
         return path.join(puppeteer.executablePath(), '../../../').replace('app.asar', 'app.asar.unpacked');
