--- a/assets/html/settings.html
+++ b/assets/html/settings.html
@@ -14,50 +14,41 @@
 
     <div class="setting-box custom-wallpaper">
       <h2>CUSTOM BACKGROUND</h2>
-  
+
       <input type="text" id="background-url" autocomplete="off">
       <button onclick="setBackground()">Set</button>
+      <button onclick="clearBackground()">Clear</button>
     </div>
-  
+
     <div class="setting-box custom-download-location">
       <h2>DOWNLOAD LOCATION</h2>
-  
+
       <input id="current-download-directory" disabled></input>
       <button onclick="getDirectory('download')">Choose</button>
     </div>
-  
-    <div class="setting-box downloader-login">
-      <h2>JDOWNLOADER LOGIN</h2>
-  
-      <input id="downloader-email" placeholder="Email"></input>
-      <input id="downloader-pass" placeholder="Password"></input>
-      <input id="downloader-details" disabled></input>
-      <button onclick="downloaderLogin()">Login</button>
-  
-    </div>
-  
+
     <div class="setting-box igdb-login">
       <h2>IGDB LOGIN</h2>
-  
+
       <input id="igdb-token" placeholder="Token"></input>
       <input id="igdb-details" class="igdb-details" disabled></input>
       <button onclick="igdbLogin()">Login</button>
     </div>
-  
+
     <div class="setting-box generate-games">
       <h2>GENERATE GAMES LIST</h2>
-  
+
       <input id="games-site" placeholder="Website"></input>
-      <input id="generate-details" class="generate-details" disabled></input>
+      <input id="generate-details" class="generate-details" placeholder="0%" disabled></input>
       <button onclick="makeList()">Generate</button>
     </div>
 
     <div class="setting-box app-version">
       <h2>VERSION</h2>
-  
+
       <input id="current-version" disabled></input>
     </div>
-  
+
   </div>
 
 </body>
