--- a/assets/html/store.html
+++ b/assets/html/store.html
@@ -11,9 +11,11 @@
   <div class="list-container">
 
     <div class="game-store-sort" id=game-store-sort">
-      <p id="game-count">Games: 0</p>
 
       <input id="game-search" class="game-search" placeholder="Search"></input>
+
+      <p class="game-count" id="game-count">Games: 0</p>
+
     </div>
 
     <div class="game-store-list" id="game-store-list">
