Removed some stuff to help align items

--- a/assets/html/main.html
+++ b/assets/html/main.html
@@ -113,8 +113,8 @@
 
           <div class='download-progress'>
             <div class="progress-status">
-              <h1 class="download-progress-counter" id="download-progress-counter">10%</h1>
-              <h1 class="download-speed-counter" id="download-speed-counter">10MB/s</h1>
+              <h1 class="download-progress-counter" id="download-progress-counter"></h1>
+              <h1 class="download-speed-counter" id="download-speed-counter"></h1>
               </div>
           </div>
         </li>
