Fixed download getting stuck at 7/10 and rewrote the sidebar

--- a/assets/html/main.html
+++ b/assets/html/main.html
@@ -111,7 +111,7 @@
 
         <li class="nav-item">
 
-          <div class='download-progress'>
+          <div class='download-progress' id="download-progress">
             <div class="progress-status">
               <h1 class="download-progress-counter" id="download-progress-counter"></h1>
               <h1 class="download-speed-counter" id="download-speed-counter"></h1>
