minor changes in generating the list

--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="discord" id="discord">
-                        <p class="discord-title">Join the discord!</p>
+                        <p class="discord-title">Join the discord for support!</p>
 
                         <button class="discord-button" onclick="Discord()">JOIN!</button>
                 </div>
