Pushed changes from last update (whoops forgot)

--- a/assets/html/main.html
+++ b/assets/html/main.html
@@ -17,7 +17,10 @@
 
   <script src="../js/init.js" defer></script>
   <script src="../js/main.js" defer></script>
-  <script src="../js/download.js" defer></script>
+
+  <script src="../js/download/addGameToLibrary.js" defer></script>
+  <script src="../js/download/getDownloadLink.js" defer></script>
+  <script src="../js/download/startDownload.js" defer></script>
 
   <script>
 
