--- a/assets/html/settings.html
+++ b/assets/html/settings.html
@@ -38,9 +38,8 @@
     <div class="setting-box generate-games">
       <h2>GENERATE GAMES LIST</h2>
 
-      <input id="games-site" placeholder="Website"></input>
-      <input id="generate-details" class="generate-details" placeholder="0%" disabled></input>
-      <button onclick="makeList()">Generate</button>
+      <input id="generate-details" class="generate-details" placeholder="0/0" disabled></input>
+      <button onclick="Open('generate')">Configure</button>
     </div>
 
     <div class="setting-box app-version">
