Half way finished for an early release for an advanced generator

--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -28,13 +28,15 @@
                 </div>
 
                 <div class="discord" id="discord">
-                        <p class="discord-title">Join the discord for support!</p>
+                        <p class="discord-title">Join the discord!</p>
 
                         <button class="discord-button" onclick="Discord()">JOIN!</button>
                 </div>
 
                 <div class="info" id="info">
                         <p class="info-title">Vapor Store is W.I.P</p>
+
+                        <button class="info-button" id="info-button" onclick="Open('settings')"></button>
                 </div>
 
         </div>
