--- a/assets/html/settings.html
+++ b/assets/html/settings.html
@@ -25,6 +25,7 @@
 
       <input id="current-download-directory" disabled></input>
       <button onclick="getDirectory('download')">Choose</button>
+      <button onclick="clearDirectory()">Clear</button>
     </div>
 
     <div class="setting-box igdb-login">
@@ -36,9 +37,8 @@
     </div>
 
     <div class="setting-box generate-games">
-      <h2>GENERATE GAMES LIST</h2>
+      <h2>CONFIGURE GAMES LIST</h2>
 
-      <input id="generate-details" class="generate-details" placeholder="0/0" disabled></input>
       <button onclick="Open('generate')">Configure</button>
     </div>
 
