--- a/assets/html/main.html
+++ b/assets/html/main.html
@@ -41,7 +41,7 @@
     const octokit = new Octokit();
     const opn = require('opn');
     const openExplorer = require('open-file-explorer');
-    const extract = require('extract-zip')
+    const extract = require('progress-extract')
 
     function getChromiumExecPath() {
       return path.join(puppeteer.executablePath(), '../../../').replace('app.asar', 'app.asar.unpacked');
