finalizing the first advanced gen release

--- a/assets/html/generate.html
+++ b/assets/html/generate.html
@@ -73,7 +73,7 @@
                 <input id="name-class" placeholder="Class"></input>
             </div>
 
-            <div class="setting-box name-id-div" id="name-id-div">
+            <div class="setting-box query-div" id="query-div">
                 <h2>Game List Query</h2>
 
                 <input id="game-list-query" placeholder="body > div > ul > li > a"></input>
