--- a/assets/html/main.html
+++ b/assets/html/main.html
@@ -13,49 +13,14 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js"></script>
 
-  <script>const socket = io.connect('http://localhost:3000');</script>
+  <script src="../js/main.js"></script>
 
   <script src="../js/init.js" defer></script>
-  <script src="../js/main.js" defer></script>
 
   <script src="../js/download/addGameToLibrary.js" defer></script>
   <script src="../js/download/getDownloadLink.js" defer></script>
   <script src="../js/download/startDownload.js" defer></script>
-
-  <script>
-
-    const waitFor = (ms) => new Promise(r => setTimeout(r, ms));
-
-    const fs = require('fs');
-    const path = require('path');
-    const request = require('request');
-    const rp = require('request-promise');
-    const $ = require('cheerio');
-    const remote = require('electron').remote;
-    const dialog = require('electron');
-    const app = remote.app;
-    const igdb = require('igdb-api-node').default;
-    const puppeteer = require('puppeteer');
-    const rimraf = require("rimraf");
-    const { Octokit } = require("@octokit/rest");
-    const octokit = new Octokit();
-    const opn = require('opn');
-    const openExplorer = require('open-file-explorer');
-    const extract = require('progress-extract')
-
-    function getChromiumExecPath() {
-      return path.join(puppeteer.executablePath(), '../../../').replace('app.asar', 'app.asar.unpacked');
-    }
-
-    const browserFetcher = puppeteer.createBrowserFetcher({ platform: 'win64', path: getChromiumExecPath() });
-    const revision = require('puppeteer/package').puppeteer.chromium_revision;
-
-    browserFetcher.download(revision)
-      .then(() => { })
-      .catch(error => console.log('Error', error))
-
-  </script>
-
+  
 </head>
 
 <body>
