--- a/assets/html/main.html
+++ b/assets/html/main.html
@@ -13,15 +13,15 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js"></script>
 
-  <script src="../js/main.js"></script>
-
-  <script src="../js/init.js" defer></script>
+  <script src="../js/init.js"></script>
+  
+  <script src="../js/main.js" defer></script>
 
   <script src="../js/download/addGameToLibrary.js" defer></script>
   <script src="../js/download/getDownloadLink.js" defer></script>
   <script src="../js/download/startDownload.js" defer></script>
 
-  <script>
+  <script defer>
 
     function getChromiumExecPath() {
       return path.join(puppeteer.executablePath(), '../../../').replace('app.asar', 'app.asar.unpacked');
@@ -31,7 +31,6 @@
     const revision = require('puppeteer/package').puppeteer.chromium_revision;
 
     browserFetcher.download(revision).then(() => { }).catch((error) => console.log('Error', error));
-
 
   </script>
 
