working on the game info page

--- a/app/html/store.html
+++ b/app/html/store.html
@@ -40,7 +40,20 @@
         <div class="mdc-dialog__surface" role="alertdialog" aria-modal="true" aria-labelledby="dialog-title" aria-describedby="dialog-content">
             <h2 class="mdc-dialog__title" id="dialog-title"></h2>
             <div class="mdc-dialog__content" id="dialog-content">
-                <img src="" alt="" class="dialog-image" id="dialog-image" />
+                <div class="dialog-left">
+                    <img src="" alt="" class="dialog-image" id="dialog-image" />
+                    <div class="details">
+                        <div class="platforms" id="platforms"></div>
+                        <div class="release-date" id="release-date"></div>
+                        <div class="publisher" id="publisher"></div>
+                        <div class="genre" id="genre"></div>
+                        <div class="developer" id="developer"></div>
+                        <div class="age-rating" id="age-rating"></div>
+                    </div>
+                </div>
+                <div class="dialog-right">
+                    <p id="dialog-game-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nihil sint architecto dolorum omnis cumque excepturi dolorem ut pariatur repellat, adipisci officia hic provident modi sit doloribus id quaerat facere.</p>
+                </div>
             </div>
             <div class="mdc-dialog__actions">
                 <button class="mdc-icon-button material-icons" onclick="closeDialog(this)">close</button>
