Game info page implemented in the store

--- a/app/html/store.html
+++ b/app/html/store.html
@@ -40,19 +40,20 @@
         <div class="mdc-dialog__surface" role="alertdialog" aria-modal="true" aria-labelledby="dialog-title" aria-describedby="dialog-content">
             <h2 class="mdc-dialog__title" id="dialog-title"></h2>
             <div class="mdc-dialog__content" id="dialog-content">
-                <div class="dialog-left">
+                <div class="dialog-top">
                     <img src="" alt="" class="dialog-image" id="dialog-image" />
+                    <p id="dialog-game-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nihil sint architecto dolorum omnis cumque excepturi dolorem ut pariatur repellat, adipisci officia hic provident modi sit doloribus id quaerat facere.</p>
+                </div>
+                <div class="dialog-bottom">
                     <div class="details">
-                        <div class="platforms" id="platforms"></div>
+                        <div class="age-rating" id="age-rating"></div>
                         <div class="release-date" id="release-date"></div>
                         <div class="publisher" id="publisher"></div>
-                        <div class="genre" id="genre"></div>
                         <div class="developer" id="developer"></div>
-                        <div class="age-rating" id="age-rating"></div>
+                        <div class="platforms" id="platforms"></div>
+                        <div class="genre" id="genre"></div>
                     </div>
-                </div>
-                <div class="dialog-right">
-                    <p id="dialog-game-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nihil sint architecto dolorum omnis cumque excepturi dolorem ut pariatur repellat, adipisci officia hic provident modi sit doloribus id quaerat facere.</p>
+                    <div class="game-screenshots" id="game-screenshots"></div>
                 </div>
             </div>
             <div class="mdc-dialog__actions">
