working on in app updater, moved download snackbar to a reusable component

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -25,6 +25,10 @@
         <script src="../js/components/downloader/downloader.js"></script>
         <script src="../js/components/downloader/extractor.js"></script>
         <script src="../js/components/downloader/add-game.js"></script>
+        <!--Updater-->
+        <script src="../js/components/updater/updater.js" defer></script>
+        <!--Notifications-->
+        <script src="../js/components/snackbar/notification-service.js" defer></script>
         <!--App Functions-->
         <script src="../js/main.js" defer></script>
         <!--Material IO-->
@@ -102,7 +106,7 @@
         <!--Main content-->
         <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust">
             <div class="overlays" id="overlays">
-                <div class="download-snackbar-container" id="download-snackbar-container">
+                <div class="snackbar-container" id="snackbar-container">
                     <!--stuff-->
                 </div>
             </div>
