--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -62,6 +62,16 @@
             <span class="mdc-button__label">Save</span>
         </button>
     </div>
+
+    <h1 class="mdc-typography--subtitle2">Opt into beta versions</h1>
+
+    <div class="mdc-switch" data-mdc-auto-init="MDCSwitch">
+        <div class="mdc-switch__track"></div>
+        <div class="mdc-switch__thumb-underlay">
+            <div class="mdc-switch__thumb"></div>
+            <input type="checkbox" id="beta-switch" class="mdc-switch__native-control" role="switch" aria-checked="false" onclick='betaOpt()' />
+        </div>
+    </div>
 </div>
 
 <script type="text/javascript">
