testing create desktop shortcut

--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -69,7 +69,7 @@
         <div class="mdc-switch__track"></div>
         <div class="mdc-switch__thumb-underlay">
             <div class="mdc-switch__thumb"></div>
-            <input type="checkbox" id="beta-switch" class="mdc-switch__native-control" role="switch" aria-checked="false" onclick='betaOpt()' />
+            <input type="checkbox" id="beta-switch" class="mdc-switch__native-control" role="switch" aria-checked="false" onclick="betaOpt()" />
         </div>
     </div>
 </div>
@@ -79,3 +79,4 @@
         mdc.autoInit();
     });
 </script>
+
