--- a/app/html/index.html
+++ b/app/html/index.html
@@ -29,6 +29,7 @@
         <script src="../js/components/updater/updater.js" defer></script>
         <!--Notifications-->
         <script src="../js/components/notifications/snackbar-service.js" defer></script>
+        <script src="../js/components/notifications/dialog-service.js" defer></script>
         <!--App Functions-->
         <script src="../js/main.js" defer></script>
         <!--Material IO-->
