--- a/app/html/installed.html
+++ b/app/html/installed.html
@@ -26,12 +26,11 @@
 <div class="mdc-dialog exec-dialog" id="exec-dialog">
     <div class="mdc-dialog__container">
         <div class="mdc-dialog__surface" role="alertdialog" aria-modal="true" aria-labelledby="dialog-title" aria-describedby="dialog-content">
-            <h2 class="mdc-dialog__title" id="exec-dialog-title">Executables</h2>
+            <h2 class="mdc-dialog__title" id="exec-dialog-title"></h2>
             <div class="mdc-dialog__content" id="exec-dialog-content">
             </div>
             <div class="mdc-dialog__actions">
                 <button class="mdc-icon-button material-icons" onclick="closeDialog(this)">close</button>
-                <button class="mdc-icon-button material-icons" id="download-button">download</button>
             </div>
         </div>
     </div>
