working on running as admin

--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -63,7 +63,7 @@
         </button>
     </div>
 
-    <h1 class="mdc-typography--subtitle2">Opt into beta versions</h1>
+    <h1 class="mdc-typography--subtitle2">Get beta updates?</h1>
 
     <div class="mdc-switch" data-mdc-auto-init="MDCSwitch">
         <div class="mdc-switch__track"></div>
