Massive downloader overhaul

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -30,6 +30,8 @@
         <!--Notifications-->
         <script src="../js/components/notifications/snackbar-service.js" defer></script>
         <script src="../js/components/notifications/dialog-service.js" defer></script>
+        <!--Window Controls-->
+        <script src="../js/components/window-management/window-controls.js" defer></script>
         <!--App Functions-->
         <script src="../js/main.js" defer></script>
         <!--Material IO-->
