--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -11,7 +11,7 @@
 <div class="settings">
     <h1 class="mdc-typography--subtitle2">Toggle the theme (Light/Dark)</h1>
 
-    <button class="mdc-button mdc-button--raised" onclick="switchTheme()" id="theme">
+    <button class="mdc-button mdc-button--raised" data-mdc-auto-init="MDCRipple" onclick="switchTheme()" id="theme">
         <div class="mdc-button__ripple"></div>
         <i class="material-icons mdc-button__icon" aria-hidden="true">bookmark</i>
         <span class="mdc-button__label"></span>
@@ -20,7 +20,7 @@
     <h1 class="mdc-typography--subtitle2">Select the games.json file</h1>
 
     <div class="output">
-        <button class="mdc-button mdc-button--raised" onclick="selectListFile()" id="theme">
+        <button class="mdc-button mdc-button--raised" data-mdc-auto-init="MDCRipple" onclick="selectListFile()">
             <div class="mdc-button__ripple"></div>
             <i class="material-icons mdc-button__icon" aria-hidden="true">attach_file</i>
             <span class="mdc-button__label">Select File</span>
@@ -32,7 +32,7 @@
     <h1 class="mdc-typography--subtitle2">Select a directory where the games will get installed</h1>
 
     <div class="output">
-        <button class="mdc-button mdc-button--raised" onclick="selectDownloadDir()" id="theme">
+        <button class="mdc-button mdc-button--raised" data-mdc-auto-init="MDCRipple" onclick="selectDownloadDir()">
             <div class="mdc-button__ripple"></div>
             <i class="material-icons mdc-button__icon" aria-hidden="true">folder</i>
             <span class="mdc-button__label">Select Folder</span>
@@ -56,7 +56,7 @@
             <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id" id="sgdb-key" />
         </label>
 
-        <button class="mdc-button mdc-button--raised output__margin" onclick="saveSGDBKey()" id="theme">
+        <button class="mdc-button mdc-button--raised output__margin" data-mdc-auto-init="MDCRipple" onclick="saveSGDBKey()">
             <div class="mdc-button__ripple"></div>
             <i class="material-icons mdc-button__icon" aria-hidden="true">checkmark</i>
             <span class="mdc-button__label">Save</span>
