getting ready for new cards from rawg.io

--- a/app/html/installed.html
+++ b/app/html/installed.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="mdc-card__action-buttons">
-                <button class="mdc-button mdc-card__action mdc-card__action--button" data-mdc-auto-init="MDCRipple" id="selected-gam-play"><span class="mdc-button__ripple"></span>Play</button>
+                <button class="mdc-button mdc-card__action mdc-card__action--button" data-mdc-auto-init="MDCRipple" id="selected-game-play"><span class="mdc-button__ripple"></span>Play</button>
                 <button class="mdc-button mdc-card__action mdc-card__action--button" data-mdc-auto-init="MDCRipple" id="selected-game-more"><span class="mdc-button__ripple"></span>Options</button>
                 <div id="menu-anchorpoint"></div>
             </div>
