Fixed open folder and ctrl key shortcut

--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -41,6 +41,16 @@
         <p class="output__margin" id="gameDownloadDir">Current folder:</p>
     </div>
 
+    <h1 class="mdc-typography--subtitle2">Auto extract files after download?</h1>
+
+    <div class="mdc-switch" data-mdc-auto-init="MDCSwitch">
+        <div class="mdc-switch__track"></div>
+        <div class="mdc-switch__thumb-underlay">
+            <div class="mdc-switch__thumb"></div>
+            <input type="checkbox" id="extract-switch" class="mdc-switch__native-control" role="switch" aria-checked="false" onclick="autoExtract()" />
+        </div>
+    </div>
+
     <h1 class="mdc-typography--subtitle2">Get beta updates?</h1>
 
     <div class="mdc-switch" data-mdc-auto-init="MDCSwitch">
