Fixed light theme and small changes to updater

--- a/app/html/store.html
+++ b/app/html/store.html
@@ -19,27 +19,27 @@
     <!--Genres-->
     <div class="genres" id="genres">
         <div class="genre-action genre-container" id="genre-action">
-            <h3 class="mdc-typography--headline3">Action</h3>
+            <h3 class="mdc-typography--headline3 genre-title">Action</h3>
             <div class="genre-cards" id="genre-Action-cards"></div>
         </div>
 
         <div class="genre-adventure genre-container" id="genre-adventure">
-            <h3 class="mdc-typography--headline3">Adventure</h3>
+            <h3 class="mdc-typography--headline3 genre-title">Adventure</h3>
             <div class="genre-cards" id="genre-Adventure-cards"></div>
         </div>
 
         <div class="genre-indie genre-container" id="genre-indie">
-            <h3 class="mdc-typography--headline3">Indie</h3>
+            <h3 class="mdc-typography--headline3 genre-title">Indie</h3>
             <div class="genre-cards" id="genre-Indie-cards"></div>
         </div>
 
         <div class="genre-racing genre-container" id="genre-racing">
-            <h3 class="mdc-typography--headline3">Racing</h3>
+            <h3 class="mdc-typography--headline3 genre-title">Racing</h3>
             <div class="genre-cards" id="genre-Racing-cards"></div>
         </div>
 
         <div class="genre-sports genre-container" id="genre-sports">
-            <h3 class="mdc-typography--headline3">Sports</h3>
+            <h3 class="mdc-typography--headline3 genre-title">Sports</h3>
             <div class="genre-cards" id="genre-Sports-cards"></div>
         </div>
     </div>
