Whole bunch of small features added and some bugs fixed

--- a/app/html/store.html
+++ b/app/html/store.html
@@ -23,24 +23,24 @@
             <div class="genre-cards" id="genre-Action-cards"></div>
         </div>
 
+        <div class="genre-strategy genre-container" id="genre-strategy">
+            <h3 class="mdc-typography--headline3 genre-title">Strategy</h3>
+            <div class="genre-cards" id="genre-Strategy-cards"></div>
+        </div>
+
         <div class="genre-adventure genre-container" id="genre-adventure">
             <h3 class="mdc-typography--headline3 genre-title">Adventure</h3>
             <div class="genre-cards" id="genre-Adventure-cards"></div>
         </div>
 
+        <div class="genre-simulation genre-container" id="genre-simulation">
+            <h3 class="mdc-typography--headline3 genre-title">Simulation</h3>
+            <div class="genre-cards" id="genre-Simulation-cards"></div>
+        </div>
+
         <div class="genre-indie genre-container" id="genre-indie">
             <h3 class="mdc-typography--headline3 genre-title">Indie</h3>
             <div class="genre-cards" id="genre-Indie-cards"></div>
-        </div>
-
-        <div class="genre-racing genre-container" id="genre-racing">
-            <h3 class="mdc-typography--headline3 genre-title">Racing</h3>
-            <div class="genre-cards" id="genre-Racing-cards"></div>
-        </div>
-
-        <div class="genre-sports genre-container" id="genre-sports">
-            <h3 class="mdc-typography--headline3 genre-title">Sports</h3>
-            <div class="genre-cards" id="genre-Sports-cards"></div>
         </div>
     </div>
 
