--- a/app/html/installed.html
+++ b/app/html/installed.html
@@ -6,6 +6,13 @@
     <script src="../js/installed.js"></script>
 </head>
 
+<div class="searchbar" id="installed-searchbar">
+    <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="searchInstalledGames()">search</button>
+    <input type="text" id="installed-searchquery" placeholder="Search..." />
+    <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="createCard()">clear</button>
+</div>
+
+
 <!--Div with cards-->
 <div class="cards" id="cards"></div>
 
