working on getting installed ganes

--- a/app/html/home.html
+++ b/app/html/home.html
@@ -3,5 +3,10 @@
     <script src="../js/home.js"></script>
 </head>
 
+<div class="intro">
+    <h1 class="mdc-typography--headline4">Welcome to Vapor Store</h1>
+    <h1 class="mdc-typography--subtitle1">Be sure to check out our Discord!</h1>
+</div>
+
 <!--Div with cards-->
 <div class="cards" id="cards"></div>
