--- a/app/html/index.html
+++ b/app/html/index.html
@@ -91,7 +91,7 @@
                     <a class="mdc-list-item" onclick="goto(this.children[2].textContent)" data-mdc-auto-init="MDCRipple">
                         <span class="mdc-list-item__ripple"></span>
                         <i class="material-icons mdc-list-item__graphic" aria-hidden="true">shop</i>
-                        <span class="mdc-list-item__text">Store</span>
+                        <span class="mdc-list-item__text">Library</span>
                     </a>
 
                     <a class="mdc-list-item" onclick="goto(this.children[2].textContent)" data-mdc-auto-init="MDCRipple">
