--- a/app/html/library.html
+++ b/app/html/library.html
@@ -1,6 +1,6 @@
 <header>
-    <link rel="stylesheet" href="../css/store.css" />
-    <script src="../js/store.js" defer></script>
+    <link rel="stylesheet" href="../css/library.css" />
+    <script src="../js/library.js" defer></script>
 
     <link rel="stylesheet" href="../css/card-grid.css" />
     <script src="../js/components/card-grid/card-builder.js"></script>
@@ -13,7 +13,7 @@
     <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="clearSearch()">clear</button>
 </div>
 
-<div class="store" id="store">
+<div class="library" id="library">
     <!--Div with cards-->
     <div class="cards" id="cards"></div>
     <!--Genres-->
