--- a/app/html/index.html
+++ b/app/html/index.html
@@ -30,6 +30,8 @@
         <!--Notifications-->
         <script src="../js/components/notifications/snackbar-service.js" defer></script>
         <script src="../js/components/notifications/dialog-service.js" defer></script>
+        <!--Add installed steam games to list-->
+        <script src="../js/components/game-management/steam-installed.js"></script>
         <!--Window Controls-->
         <script src="../js/components/window-management/window-controls.js" defer></script>
         <!--App Functions-->
