Working on downloader tab

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -96,15 +96,23 @@
 
                     <a class="mdc-list-item" onclick="goto(this.children[2].textContent)" data-mdc-auto-init="MDCRipple">
                         <span class="mdc-list-item__ripple"></span>
+                        <i class="material-icons mdc-list-item__graphic" aria-hidden="true">get_app</i>
+                        <span class="mdc-list-item__text">Downloader</span>
+                    </a>
+
+                    <a class="mdc-list-item" onclick="goto(this.children[2].textContent)" data-mdc-auto-init="MDCRipple">
+                        <span class="mdc-list-item__ripple"></span>
                         <i class="material-icons mdc-list-item__graphic" aria-hidden="true">videogame_asset</i>
                         <span class="mdc-list-item__text">Installed</span>
                     </a>
 
+                    <!--
                     <a class="mdc-list-item" onclick="goto(this.children[2].textContent)" data-mdc-auto-init="MDCRipple">
                         <span class="mdc-list-item__ripple"></span>
                         <i class="material-icons mdc-list-item__graphic" aria-hidden="true">backup</i>
                         <span class="mdc-list-item__text">Backup & Sync</span>
                     </a>
+                    -->
 
                     <a class="mdc-list-item" onclick="goto(this.children[2].textContent)" data-mdc-auto-init="MDCRipple">
                         <span class="mdc-list-item__ripple"></span>
