--- a/app/html/installed.html
+++ b/app/html/installed.html
@@ -28,7 +28,7 @@
 </button>
 
 <!--Game page-->
-<div class="selected-game" id="selected-game">
+<div class="selected-game game-info" id="selected-game">
     <!--top row-->
     <div class="top-row installed">
         <div class="mdc-card">
