--- a/app/html/library.html
+++ b/app/html/library.html
@@ -45,7 +45,7 @@
     </div>
 
     <!--Game page-->
-    <div class="selected-game" id="selected-game">
+    <div class="selected-game game-info" id="selected-game">
         <!--top row-->
         <div class="top-row">
             <div class="mdc-card" id="selected-game-download">
