Working on downloader menu

--- a/app/html/downloader.html
+++ b/app/html/downloader.html
@@ -6,6 +6,8 @@
     <script src="../js/components/download-page/downloading-item.js"></script>
     <script src="../js/components/download-page/extracting-item.js"></script>
 
+    <script src="../js/downloader.js"></script>
+
     <script src="../js/components/card-grid/card-grid.js"></script>
 </head>
 
